header links fixed, z-index added

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -39,6 +39,7 @@ header {
 	-webkit-background-size: cover !important;
    text-align: center;
    overflow: hidden;
+   
 }
 header .container-home {
    opacity: 0.5;
@@ -75,11 +76,12 @@ header .banner {
    padding-bottom: 30%;
    padding-left: 45%;
    text-align: right;
+  
 }
-/* Title */
-header .banner-text { width: 90%; }
+/* Title, Parent to other elements 'banner-text' */
+header .banner-text { width: 85%; }
 header .banner-text h1 {
-   font: 80px/1.5em 'Bungee', bolder;
+   font: 60px/1.2em 'Bungee', bolder;
    color: black;
    letter-spacing: -2px;
    padding-top: 40px;
@@ -100,31 +102,31 @@ header .banner-text h3 a {
    color: black;
    text-shadow: 4px 1px 3px rgb(204, 177, 24);
 }
-header .banner-text hr {
-   width: 100%;
-   margin: 18px auto 24px auto;
-   border-color: #2F2D2E;
-   border-color: rgba(150, 150, 150, .1);
-}
+
 
 /* header social links */
 
  header .social {
    
+  
    font-size: 1000%;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
-   width: 100%;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  position: relative;
 }
  header .social li {
   
-   display: vertical;
+  position: relative;
+   display: inline-block, vertical;
   
  
    
-   padding: 1%;
+   
 }
 
-header .social li a { color:rgb(204, 177, 24); }
+header .social li a { color:rgb(204, 177, 24);  }
 header .social li a:hover { color: rgba(0, 0, 0, .8); }
 
 /* scrolldown link */
@@ -569,11 +571,12 @@ ul#nav li.current a { color: rgb(204, 177, 24); }
 }
 
 /* Portfolio Content */
-#portfolio-wrapper .columns { margin-bottom: 36px; }
+#portfolio-wrapper .columns { margin-bottom: 36px; position: center; }
 .portfolio-item .item-wrap {
    background: #95A3A3;;
    overflow: hidden;
    position: relative;
+   
 
    -webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
@@ -583,6 +586,7 @@ ul#nav li.current a { color: rgb(204, 177, 24); }
 }
 .portfolio-item .item-wrap a {
    display: block;
+   
    cursor: pointer;
 }
 
